# Multi-Agent-Financial-Analyzer

./: README.md  investment_report_AMZN.md  investment_report_MSFT.md  investment_report_TSLA.md  pyproject.toml  test_langsmith.py
frontend/: app.py
src/agents/: crew.py
src/api/: main.py  models.py  routes.py
