[project]
name = "crewai-agent-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-monitor-opentelemetry>=1.6.7",
    "azure-storage-blob>=12.29.0",
    "crewai>=1.14.5",
    "crewai-tools>=1.14.5",
    "fastapi>=0.136.3",
    "firecrawl-py>=4.28.0",
    "langsmith>=0.8.5",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.57.0",
    "uvicorn>=0.48.0",
    "yfinance>=1.4.0",
]
